--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.main-link {
+  @apply bg-zinc-800 rounded-md text-white px-4 py-2 w-28;
+}
