--- a/app/globals.css
+++ b/app/globals.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 .main-link {
-  @apply bg-zinc-800 rounded-md text-white px-4 py-2 w-28;
+  @apply bg-zinc-800 rounded-md text-white px-4 py-2 min-w-min;
 }
